Refactor SSLCommerzPaymentService class related maintability issues